* Removed LuxRays support for virtual devices and hybrid rendering (old LuxRender GPU doing ray intersections and CPU everything else)
* Geometry vertex and triangle AOV (arbitrary data associated to mesh vertices and triangle usable by textures)
* Removed the support for Triplanar texture .uvindex (side effect of the above new feature)
* New hitpointvertexaov nad hitpointtriangleaov textures
* Pointiness shape can now assign curvature values to vertex AOV with .aovindex property (a 4294967296 value will force the use of alpha channel instead, defualt value for compatibility with the past)
* LuxCore API has now SetMeshVertexAOV() and SetMeshTriangleAOV() methods to set geometry vertex and triangle AOV
* Added the support for new Random texture
* Added the support for the new IslandAOV shape
* Added the support for RandomTriangleAOV shape
* Accelerated duplicate vertex detection in pointiness shape (from 6.7 seconds to 0.016 seconds on a 100k vertex mesh)
* LuxRays API reworked to support generic hardware devices (now OpenCL, potentially CUDA, Vulkan, Metal, etc.)
* Added the support for light groups to PhotonGI
* New LuxCore API RenderConfig::HasCachedKernels() method to check if a (long) kernel compilation time is required
* Glossycoating material on GPUs now supports bump mapping exactly like CPU version (issue #307)

### Fixed Bugs

* Fixed a rendering difference when using/not using geometry negative scale transformations (issue #309)
* Fixed an out of bound access in BAKECPU
* Fixed a problem when using path.forceblackbackground.enable and env. lights
* Fixed a problem with scenes with very hard light paths and Metropolis sampler (issue #312)
* Sampler shared data are now reseted at the end of a scene edit (issue #312)
* Fixed a problem in automatic cache radius estimation of PhotonGI when using Orthographic camera (issue #324)
* Fixed an OpenCL compilation error when using large number of objects on some old GPUs
