@@ -1,6 +1,10 @@
-film.width = 640
-film.height = 480
+film.width = 800
+film.height = 600
 scene.file = scenes/luxball/mix2ball.scn
+##
+#path.hybridbackforward.enable = 1
+#path.hybridbackforward.partition = 0.0
+##
 opencl.cpu.use = 1
 opencl.gpu.use = 1
 # Select the OpenCL platform to use (0=first platform available, 1=second, etc.)
