@@ -9,16 +9,19 @@ scene.textures.bumpmap.file = scenes/bump/map2.png
 scene.textures.bumpmap.gain = 2.0
 scene.textures.bumpmap.gamma = 1.0
 scene.textures.bumpmap.mapping.uvscale = 5 5
+scene.textures.scaled_bumpmap.type = scale
+scene.textures.scaled_bumpmap.texture1 = 0.01
+scene.textures.scaled_bumpmap.texture2 = bumpmap
 ################################################################################
 scene.materials.mat1.type = mirror
 scene.materials.mat1.kr = 0.8 0.8 0.8
 scene.materials.mat2.type = matte
 scene.materials.mat2.kd = 0.65 0.0 0.0
+scene.materials.mat2.bumptex = scaled_bumpmap
 scene.materials.shell.type = mix
 scene.materials.shell.material1 = mat1
 scene.materials.shell.material2 = mat2
 scene.materials.shell.amount = tex
-scene.materials.shell.bumptex = bumpmap
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
 scene.materials.luxtext.type = matte
