@@ -11,7 +11,7 @@
 * Geometry vertex and triangle AOV (arbitrary data associated to mesh vertices and triangle usable by textures)
 * Removed the support for Triplanar texture .uvindex (side effect of the above new feature)
 * New hitpointvertexaov nad hitpointtriangleaov textures
-* Pointiness shape can now assign curvature values to vertex AOV with .aovindex property (a 4294967296 value will force the use of alpha channel instead, defualt value for compatibility with the past)
+* Pointiness shape can now assign curvature values to vertex AOV with .aovindex property (a 4294967296 value will force the use of alpha channel instead, default value for compatibility with the past)
 * LuxCore API has now SetMeshVertexAOV() and SetMeshTriangleAOV() methods to set geometry vertex and triangle AOV
 * Added the support for new Random texture
 * Added the support for the new IslandAOV shape
@@ -21,6 +21,7 @@
 * Added the support for light groups to PhotonGI
 * New LuxCore API RenderConfig::HasCachedKernels() method to check if a (long) kernel compilation time is required
 * Glossycoating material on GPUs now supports bump mapping exactly like CPU version (issue #307)
+* Mix material on GPUs now supports bump mapping exactly like CPU version (issue #307)
 
 ### Fixed Bugs
 
